app/scripts/modules/netflix/canary/canary.less
.canary-container {
  padding: 10px;
  display: flex;
  flex-direction: row;
}

.score-large .score {
  height: 48px;
  line-height: 38px;
  padding: 0 10px 0 10px;
  font-size: 175%;
  border-radius: 0px;
  margin: 10px 0 5px 10px;
  min-width: 48px;
}

.canary-column {
  flex: 0 0 auto;
  margin-left: 10px;
}

.canary-column:not(:last-child) {
  margin-right: 15px;
}

